; ModuleID = '/home/carl/AnghaBench/netdata/daemon/extr_main.c_verify_required_directory.c'
source_filename = "/home/carl/AnghaBench/netdata/daemon/extr_main.c_verify_required_directory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"Cannot cd to directory '%s'\00", align 1
@.str.1 = private unnamed_addr constant [46 x i8] c"Cannot examine the contents of directory '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @verify_required_directory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @verify_required_directory(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @chdir(i8* %4)
  %6 = icmp eq i32 %5, -1
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 @fatal(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i8* %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i8*, i8** %2, align 8
  %12 = call i32* @opendir(i8* %11)
  store i32* %12, i32** %3, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %18, label %15

15:                                               ; preds = %10
  %16 = load i8*, i8** %2, align 8
  %17 = call i32 @fatal(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0), i8* %16)
  br label %18

18:                                               ; preds = %15, %10
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @closedir(i32* %19)
  %21 = load i8*, i8** %2, align 8
  ret i8* %21
}

declare dso_local i32 @chdir(i8*) #1

declare dso_local i32 @fatal(i8*, i8*) #1

declare dso_local i32* @opendir(i8*) #1

declare dso_local i32 @closedir(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
